...
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/accountIconIv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accountBalanceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/primaryText"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/accountIconIv" />

        <ImageButton
            android:id="@+id/accountNewOperationIb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add_24dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
...
