...
            android:layout_marginEnd="@dimen/item_view_margin"
            android:layout_marginStart="@dimen/item_view_margin"
            android:layout_marginTop="@dimen/item_view_margin"
            style="@style/TextStyle.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_group_name"
            app:mutableText="@{viewModel.getDate()}" />

        <TextView
            android:id="@+id/tv_group_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...
            style="@style/TextStyle.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mutableText="@{viewModel.getImageCategory()}"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_view_margin"
            android:layout_marginEnd="@dimen/item_view_margin"
            android:layout_marginTop="@dimen/item_view_margin"
            android:layout_weight="1"
...
