...
            android:text="@string/transaction_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountNameTv" />

        <EditText
            android:id="@+id/etTransactionSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/constrain_padding"
            android:layout_marginStart="@dimen/constrain_padding"
            android:ems="10"
            android:inputType="numberDecimal"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnCreateTransaction"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_alignParentEnd="true"/>

...
