<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kissedcode.finance.transaction.TransactionListViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/post_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adapter="@{viewModel.getTransactionListAdapter()}" />

    </android.support.design.widget.CoordinatorLayout>

</layout>